icon (Does not show)

--- a/TriviaPLay/TriviaPLay.csproj
+++ b/TriviaPLay/TriviaPLay.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\AppIcon\appicon.png" />
 	  <None Remove="Resources\Images\title.png" />
 	  <None Remove="Resources\Images\underwater1.jpg" />
 	  <None Remove="Resources\Images\underwater2.jpg" />
@@ -70,6 +71,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Plugin.Maui.Audio" Version="3.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Page Include="Resources\AppIcon\appicon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
